# s3-storage

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml
.github/workflows/: docker.yml
admin-ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
admin-ui/src/components/: BucketSettingsModal.tsx  Layout.tsx  PageHeader.tsx  ui.tsx
admin-ui/src/context/: auth.tsx
admin-ui/src/lib/: api.ts  format.ts
admin-ui/src/pages/: Browser.tsx  Buckets.tsx  Dashboard.tsx  Login.tsx  Multipart.tsx  Settings.tsx
src/: access.rs  config.rs  cors.rs  host.rs  lib.rs  main.rs  settings.rs
src/admin/: api.rs  assets.rs  auth.rs  mod.rs  presign.rs
src/backend/: checksum.rs  error.rs  fs.rs  mod.rs  s3.rs  shared.rs  utils.rs
tests/: admin.rs  boto3_compat.rs  integration.rs  smoke_boto3.py
